[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/platforms/tile_0048.png" type="Texture" id=1]
[ext_resource path="res://assets/platforms/tile_0049.png" type="Texture" id=2]
[ext_resource path="res://assets/platforms/tile_0050.png" type="Texture" id=3]
[ext_resource path="res://game/items/platform/GrowthPlatform.gd" type="Script" id=4]
[ext_resource path="res://game/items/platform/PlatformBody.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 9 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformBody/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "destroy"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformBody/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.0, 97.9593 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -22.0, -69.1461 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 30 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 18, 0 ), Vector2( 25, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -18, 0 ), Vector2( -22, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 41.8182, 16.3636 )

[node name="Platform" type="Node2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -18, 0 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 18, 0 )
texture = ExtResource( 3 )

[node name="PlatformBody" type="StaticBody2D" parent="." groups=["platform"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformBody"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/destroy = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -30.0
margin_top = -7.0
margin_right = 30.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 4 )
text = "L: 10000"
align = 1
valign = 1
autowrap = true

[node name="PickableArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableArea"]
shape = SubResource( 5 )

[node name="CoolDown" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="PickableArea" to="." method="_on_PickableArea_mouse_entered"]
[connection signal="mouse_exited" from="PickableArea" to="." method="_on_PickableArea_mouse_exited"]
[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
